syntax = "proto3";

package api.file.v1;
import "google/api/annotations.proto";
option go_package = "filesharer/api/file/v1;v1";
option java_multiple_files = true;
option java_package = "api.file.v1";

service File {
  rpc ListByIp (ListByIpRequest) returns (ListByIpReply);
  rpc GetDetailByIp (GetDetailByIpRequest) returns (GetDetailByIpReply){
    option (google.api.http) = {
      post: "v1/file/detail",
      body:"*"
    };
  };
  rpc DownloadByIp (DownloadByIpRequest) returns (DownloadByIpReply);
  rpc DownloadDirByIp (DownloadDirByIpRequest) returns (DownloadDirByIpReply);
  rpc ListNode (ListNodeRequest) returns (ListNodeReply);

}
message ListByIpRequest{
  string ip = 1;
  string dir = 2;
}
message ListByIpReply{
  message item{
    string file_name = 1;
    bool is_dir = 2;
  }
  repeated item data = 1;
}
message GetDetailByIpRequest{
  string ip = 1;
  string file_name = 2;
}
message GetDetailByIpReply{
  string file_name = 1;
  int64 size = 2;
  int64 updated_at = 3;
}
message DownloadByIpRequest{
  string ip = 1;
  string file_name = 2;

}
message DownloadByIpReply{
  //todo
}
message DownloadDirByIpRequest{
  string ip = 1;
  string file_name = 2;
}
message DownloadDirByIpReply{
  //todo
}
message ListNodeRequest{}
message ListNodeReply{
  message item{
    string hostname = 1;
    string ip = 2;
  }
  repeated item data=1;
}